btr data fetch service